@@ -1682,7 +1682,7 @@ GConfEngine     *conf,const gchar     *key,GError     **err
 GConfEngine     *conf,const gchar     *key,GError     **err
 </FUNCTION>
 <FUNCTION>
-<NAME>gconf_get_string</NAME>
+<NAME>gconf_engine_get_string</NAME>
 <RETURNS>gchar *</RETURNS>
 GConfEngine     *conf,const gchar     *key,GError     **err
 </FUNCTION>
