@@ -270,7 +270,7 @@ gconf_valid_key
 gconf_key_is_below
 gconf_engine_get_float
 gconf_engine_get_int
-gconf_get_string
+gconf_engine_get_string
 gconf_engine_get_bool
 gconf_engine_get_schema
 gconf_engine_get_list
