@@ -511,7 +511,7 @@
           arguments and returns a
           <structname>GConfValue</structname>. There are also
           convenience wrappers such as
-          <function>gconf_get_string()</function> and
+          <function>gconf_engine_get_string()</function> and
           <function>gconf_engine_get_int()</function> that allow you to avoid
           the pesky <structname>GConfValue</structname> union.
         </para>
